Bug 431026 - color picker colored square stay on the canvas
Summary: color picker colored square stay on the canvas
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 4.4.2-beta2
Platform: Compiled Sources Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Emmet O'Neill
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-01-01 09:11 UTC by mako_matt
Modified: 2021-01-06 09:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot-with-squares (61.97 KB, image/png)
2021-01-01 09:11 UTC, mako_matt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mako_matt 2021-01-01 09:11:58 UTC
Created attachment 134432 [details]
screenshot-with-squares

SUMMARY
after selecting a layer, when using the 'ctrl' key to pick a color on the canvas, the squares that are drawn under the cursor stay on the canves. 
To make them desappear, you have to change layer or move the cursor over the squares (a refresh of the canvas make them desappear?).
The problem happen only with stylus, with the mouse, the squares don't popup (you have to move the mouse to make the cursor change if 'ctrl' is pressed).

STEPS TO REPRODUCE
1. create a new document,
2. paint a stroke on the canvas,
3. add a new layer,
4. use the 'ctrl' key and pick a color on the stroke.

OBSERVED RESULT
the 2 squares are drawn under the cursor and stay visible until the canvas is refresh.

EXPECTED RESULT
the squares desappear when releasing 'ctrl'.

SOFTWARE/OS VERSIONS
Windows 10 (x86_64)
Qt Version: 5.12.9

ADDITIONAL INFORMATION


-------------------------------------------------------------
Krita

 Version: 4.4.2-beta2
 Languages: en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, en_US, en, fr_FR, fr, en_US, en
 Hidpi: true

Qt

  Version (compiled): 5.12.9
  Version (loaded): 5.12.9

OS Information

  Build ABI: x86_64-little_endian-llp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: winnt
  Kernel Version: 10.0.19042
  Pretty Productname: Windows 10 (10.0)
  Product Type: windows
  Product Version: 10

OpenGL Info
 
  Vendor:  "Google Inc." 
  Renderer:  "ANGLE (NVIDIA GeForce GTX 1070 Direct3D11 vs_5_0 ps_5_0)" 
  Version:  "OpenGL ES 3.0 (ANGLE 2.1.0.57ea533f79a7)" 
  Shading language:  "OpenGL ES GLSL ES 3.00 (ANGLE 2.1.0.57ea533f79a7)" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:    QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples 0, swapBehavior QSurfaceFormat::DefaultSwapBehavior, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::NoProfile) 
     Version: 3.0
     Supports deprecated functions false 
     is OpenGL ES: true 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsAngleD3D11: true 
  isQtPreferAngle: true 

Hardware Information

  GPU Acceleration: auto
  Memory: 32683 Mb
  Number of Cores: 16
  Swap Location: C:/Users/matt1/AppData/Local/Temp

Current Settings

  Current Swap Location: C:/Users/matt1/AppData/Local/Temp
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 150
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Use AMD Vectorization Workaround: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 900
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: true
  Levels of Detail Enabled: false
  Use Zip64: true


Display Information
Number of screens: 2
	Screen: 0
		Name: \\.\DISPLAY2
		Depth: 32
		Scale: 1
		Resolution in pixels: 3840x2160
		Manufacturer: 
		Model: 
		Refresh Rate: 60
	Screen: 1
		Name: \\.\DISPLAY1
		Depth: 32
		Scale: 1
		Resolution in pixels: 2560x1440
		Manufacturer: 
		Model: 
		Refresh Rate: 59


---------------------
================================================================================
SESSION: 01 Jan 2021 09:46:09 +0100. Executing S:\DL\krita-x64-4.4.2-beta2\bin\krita.exe

Krita Version: 4.4.2-beta2, Qt version compiled: 5.12.9, loaded: 5.12.9. Process ID: 1836
-- -- -- -- -- -- -- --
01 Jan 2021 09:46:09 +0100: Style: fusion. Available styles: windowsvista, Windows, Fusion

---------------------
Comment 1 Ahab Greybeard 2021-01-01 12:31:30 UTC
SUMMARY:
I can confirm that there is a problem with the Ctrl colour picker colour-squares presentation when using the 4.4.2-beta2 appimage on Debian 10 and when using the portable .zip package on Windows 10.

This does not happen with the 4.4.2-beta-1 or previous versions.

For me, the presentation of the problem is different to that described by the OP.

The presence or absence of the new/additional layer does not seem to affect things.

DETAIL:
On Windows, I see no colour squares but the selected colour is updated properly.

On Linux, the selected colour is updated properly but the situation is very complicated. It varies depending on use of mouse vs stylus, on a fresh restart vs a second new document, on whether the mouse is used first or the stylus is used first, on whether I paint a stroke between colour selection vs repeated colour selections with no stroke painting between them.
I'm not going to even try to report all the variations.

The 'general' problem with a stylus is that only the selected colour square is shown, not the previous colur as well
When selected, the single colour square vanishes for about 1 second and then the newly selected colour square appears.
Holding Ctrl down and moving the cursor makes the colour square disappear for about a second before it reappears, the time varies depending how far the cursor is move.

The 'general' problem with a mouse is that there are no colour squares.

SOFTWARE:
Krita

 Version: 4.4.2-beta2
 Languages: en_GB, en, en, en_GB, en
 Hidpi: false

Qt

  Version (compiled): 5.12.9
  Version (loaded): 5.12.9

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 4.19.0-12-amd64
  Pretty Productname: Debian GNU/Linux 10 (buster)
  Product Type: debian
  Product Version: 10
  Desktop: MATE

OpenGL Info
 
  Vendor:  "NVIDIA Corporation" 
  Renderer:  "GeForce GTX 750 Ti/PCIe/SSE2" 
  Version:  "4.6.0 NVIDIA 450.66" 
  Shading language:  "4.60 NVIDIA" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:    QSurfaceFormat(version 4.6, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
     Version: 4.6
     Supports deprecated functions true 
     is OpenGL ES: false 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsOpenGLES: true 
  isQtPreferOpenGLES: false 

Hardware Information

  GPU Acceleration: auto
  Memory: 16039 Mb
  Number of Cores: 8
  Swap Location: /tmp

Current Settings

  Current Swap Location: /tmp
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 30
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Use AMD Vectorization Workaround: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 900
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: false
  Levels of Detail Enabled: true
  Use Zip64: false


Display Information
Number of screens: 2
	Screen: 0
		Name: DVI-D-1
		Depth: 24
		Scale: 1
		Resolution in pixels: 1280x1024
		Manufacturer: Dell Inc.
		Model: DELL 1704FPV-
		Refresh Rate: 60
	Screen: 1
		Name: DVI-D-0
		Depth: 24
		Scale: 1
		Resolution in pixels: 1280x1024
		Manufacturer: Dell Inc.
		Model: DELL 1704FPV-
		Refresh Rate: 60
Comment 2 Emmet O'Neill 2021-01-05 22:52:52 UTC
Git commit 2ca2d85fabd284706b6d992df96b6eba5a8fec74 by Emmet O'Neill.
Committed on 05/01/2021 at 22:47.
Pushed by emmetoneill into branch 'master'.

Fixed color sampler preview decoration rendering.

M  +1    -1    libs/ui/tool/kis_tool_paint.cc

https://invent.kde.org/graphics/krita/commit/2ca2d85fabd284706b6d992df96b6eba5a8fec74
Comment 3 Emmet O'Neill 2021-01-05 23:03:40 UTC
Git commit f11440db65bf6e9fe3d172c50ddb537856517a4c by Emmet O'Neill.
Committed on 05/01/2021 at 23:03.
Pushed by emmetoneill into branch 'krita/4.4.2'.

Fixed color sampler preview decoration rendering.


(cherry picked from commit 2ca2d85fabd284706b6d992df96b6eba5a8fec74)

M  +1    -1    libs/ui/tool/kis_tool_paint.cc

https://invent.kde.org/graphics/krita/commit/f11440db65bf6e9fe3d172c50ddb537856517a4c
Comment 4 Halla Rempt 2021-01-06 09:49:36 UTC
Git commit dfc98b3f1eca15c1d83989d5e385a441c5c44215 by Halla Rempt, on behalf of Emmet O'Neill.
Committed on 06/01/2021 at 09:49.
Pushed by rempt into branch 'krita/4.3'.

Fixed color sampler preview decoration rendering.
(cherry picked from commit 2ca2d85fabd284706b6d992df96b6eba5a8fec74)

M  +1    -1    libs/ui/tool/kis_tool_paint.cc

https://invent.kde.org/graphics/krita/commit/dfc98b3f1eca15c1d83989d5e385a441c5c44215