Fixed color sampler preview decoration rendering.

BUG:431026